--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
-    <string name="app_name">ijkplayer</string>
+    <string name="app_name">视频监控</string>
     <string name="qian">前摄像</string>
     <string name="hou">后摄像</string>
     <string name="zuo">左摄像</string>
     <string name="you">右摄像</string>
     <string name="shangdi">上帝视角</string>
+    <string name="Video">视频监控</string>
+    <string name="park">出泊车</string>
+    <string name="call">叫车</string>
 </resources>
